Primer Intento Usando Git en VScode

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class ="presentacion_elemento item_1" id="presentacion">
                     <h2>MARCO RUVALCABA</h2>
-                    <p>Software Developer</p>
+                    <p>Primer Intento Usando Git en VScode</p>
                 </div>
 
             </div>
