Actualizacion de la presentacion

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#ID_Portafolio">PORTFOLIO</a>
                 <a href="#ID_Experiencia">EXPERIENCE</a>
                 <a href="#ID_Educacion">EDUCATION</a>
-                <a href="#ID_Contacto">CONTAC</a>
+                <a href="#ID_Contacto">CONTACT</a>
             </nav>
         </div>
 
@@ -52,7 +52,7 @@
 
                 <div class ="presentacion_elemento item_1" id="presentacion">
                     <h2>MARCO RUVALCABA</h2>
-                    <p>Primer Intento Usando Git en VScode</p>
+                    <p>Software Developer</p>
                 </div>
 
             </div>
