--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
                     <p>
                         Computer engineer focused on RPA development with knowledge acquired for 3 years through projects in the IT industry. I seek to develop my career by contributing my Blue Prism and Excel skills to achieve end goals that meet client needs and preferences.
                         I seek to grow as a developer carrying out programming projects, from web applications in html/css; robotics projects with microcontroller programming in Python; among other different projects.
-                        Passionate about graphic design and digital illustration adding design as a part of software development. Test
+                        Passionate about graphic design and digital illustration adding design as a part of software development.
                     </p>
                 </div> 
 
             </div>
+        </section>
+
+        <section id = "ID_Ilustracion", class="Ilustracion_Seccion">
+            <img src="images/ILLUSTRACION_EN_CONSTRUCCION.svg" class="Ilustracion_Imagen"> </img>
         </section>
 
         <section id = "ID_Conjunto_De_Habilidades", class="conjuntoDeHabilidades_seccion">
@@ -147,7 +151,7 @@
             </div>
         </section>
 
-
+        
 
         <section id = "ID_Portafolio", class="Portafolio_seccion">
             <div class = "Portafolio_contenedor">
@@ -162,74 +166,22 @@
                         <P>Creación de un telerobot capaz de levantar muestras de terreno como rocas de gran tamaño.</P>
                     </div>
                 </div>
-
-            </div>
-        </section>
-
-
-        <!--
-        <section id = "ID_Portafolio", class="presentacion_seccion">
-            <div class = "presentacion_contenedor">
-
-                <h1> </h1>
-
-                <div class = "Portafolio_Galeria">
-
-                    <div class = "Portafolio_Imagen">
-                        <img src = "images/Ejemplo_Seccion_1.svg";>
-                        <div class = "Portafolio_Hover">
-                            <img src = "images/Ejemplo_Logo_Diseño.svg";>
-                        </div>
-                    </div>
-
-                    <div class = "Portafolio_Imagen">
-                        <img src = "images/Ejemplo_Seccion_1.svg";>
-                        <div class = "Portafolio_Hover">
-                            <img src = "images/Ejemplo_Logo_Diseño.svg";>
-                        </div>
-                    </div>
-
-                    <div class = "Portafolio_Imagen">
-                        <img src = "images/Ejemplo_Seccion_1.svg";>
-                        <div class = "Portafolio_Hover">
-                            <img src = "images/Ejemplo_Logo_Diseño.svg";>
-                        </div>
-                    </div>
-
-                    <div class = "Portafolio_Imagen">
-                        <img src = "images/Ejemplo_Seccion_1.svg";>
-                        <div class = "Portafolio_Hover">
-                            <img src = "images/Ejemplo_Logo_Diseño.svg";>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
-        -->
-
-        <!-- -->
-        <!-- 
-        <section id = "ID_Portafolio", class="Portafolio_seccion">
-            <div class = "Portafolio_contenedor">
                 
-                <div class = "Portafolio_elemento item_1">
-                    <img src = "images/ABOUTME_CHARACTER.svg";>
-                </div>
+                <span>&#160</span>
 
-                <div class = "Portafolio_elemento item_2">
-                    <h1>About me</h1>
-                    <p>I studied Computer Science and my work experience is focused on automation performing
-                        Robotic Process Automation "RPA", responsible for performing repetitive and prone to errors
-                        tasks that for a person could take from hours to days. By automating with RPA, I reduced
-                        errors and time on different teams inside and outside of IBM.</p>
-                </div> 
+                <div class="Portafolio_elemento">
+                    <div>
+                        <img src="images/PORTAFOLIO_KUKLIM.jpg" class="Portafolio_elemento_img"> </img>
+                    </div>
+                    <div class="Portafolio_texto">
+                        <h1>KUKLIM</h1>
+                        <h2>ROBOT</h2>
+                        <P>Creación de un telerobot capaz de levantar muestras de terreno como rocas de gran tamaño.</P>
+                    </div>
+                </div>
 
             </div>
         </section>
-        -->
-
 
 
         <section id = "ID_Experiencia", class="Experiencia_seccion">
@@ -314,6 +266,9 @@
         </section>
 
         <!-- -->
+        <section id = "ID_Ilustracion", class="Ilustracion_Seccion">
+            <img src="images/ILLUSTRACION_EN_CONSTRUCCION.svg" class="Ilustracion_Imagen"> </img>
+        </section>
 
 
         <section id = "ID_Contacto", class = "contacto_seccion">
