formulario de contacto test

--- a/index.html
+++ b/index.html
@@ -321,31 +321,31 @@
                     <div class="form__container">
 
                         <div class="form__group">
-                            <input type="text", name="nombre", id="nombre" class="form__input" placeholder="NOMBRE">
+                            <input required type="text", name="nombre", id="nombre" class="form__input" placeholder="NOMBRE">
                             <label for="nombre" class="form__label">Nombre</label>
                             <span class="form__line"></span>
                         </div>
 
                         <div class="form__group">
-                            <input type="text", name="empresa", id="empresa" class="form__input" placeholder="EMPRESA">
+                            <input required type="text", name="empresa", id="empresa" class="form__input" placeholder="EMPRESA">
                             <label for="empresa" class="form__label">Empresa</label>
                             <span class="form__line"></span>
                         </div>
 
                         <div class="form__group">
-                            <input type="text", name="correo", id="correo" class="form__input" placeholder="CORREO">
+                            <input required type="text", name="correo", id="correo" class="form__input" placeholder="CORREO">
                             <label for="correo" class="form__label">Correo</label>
                             <span class="form__line"></span>
                         </div>
 
                         <div class="form__group">
-                            <input type="text", name="asunto", id="asunto" class="form__input" placeholder="ASUNTO">
+                            <input required type="text", name="asunto", id="asunto" class="form__input" placeholder="ASUNTO">
                             <label for="asunto" class="form__label">Asunto</label>
                             <span class="form__line"></span>
                         </div>
 
                         <div class="form__group">
-                            <input type="text", name="mensaje", id="mensaje" class="form__input" placeholder="MENSAJE">
+                            <input required type="text", name="mensaje", id="mensaje" class="form__input" placeholder="MENSAJE">
                             <label for="mensaje" class="form__label">Mensaje</label>
                             <span class="form__line"></span>
                         </div>
