Cambios Realizados a index desde GITBASH con VSC abierto

--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
 
         </section>
 
+        <section id="ID_Portafolio", class="Seccion_Generica" >
+
+            <div class = "Contenedor_Cuadros">
+
+                <div class = "Cuadro"> <img src="images/Pokemon1.svg" alt=""> </div>
+                <div class = "Cuadro"> <img src="images/Pokemon2.svg" alt=""> </div>
+                <div class = "Cuadro"> <img src="images/Pokemon3.svg" alt=""> </div>
+                <div class = "Cuadro"> <img src="images/Pokemon4.svg" alt=""> </div> 
+      
+            </div>
+
+        </section>
+
         <!--
 
         <section class="seccion_slider">
