Cambios index.html y style.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Marco Ruvalcaba Portfolio</title>
+        <title>Marco Ruvalcaba</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="widht=device-widht, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -70,14 +70,6 @@
 
             </div>
         </section>
-    
-
-        <!-- 
-        <section id = "ID_Ilustracion", class="Seccion_Generica">
-            <img src="images/ILLUSTRACION_EN_CONSTRUCCION.svg" class="Ilustracion_Imagen"> </img>
-        </section>
-        -->
-
 
         <section id = "ID_Conjunto_De_Habilidades", class="Seccion_Generica">
             <div class = "ConjuntoDeHabilidades_Contenedor">
@@ -165,32 +157,6 @@
             </div>
 
         </section>
-
-        <!--
-
-        <section class="seccion_slider">
-
-            <div class = "contenedor">
-
-                <ul class = "slider">
-                    <li id="slide1"> <img src="images/SKILLSET_1_Excel.svg"     alt=""> </li>
-                    <li id="slide2"> <img src="images/SKILLSET_2_BluePrism.svg" alt=""> </li>
-                    <li id="slide3"> <img src="images/SKILLSET_3_VBA.svg"       alt=""> </li>
-                    <li id="slide4"> <img src="images/SKILLSET_4_Python.svg"    alt=""> </li>
-                </ul>
-
-                <ul class="menu_slider">
-                    <li> <a href="#slide1">.</a> </li>
-                    <li> <a href="#slide2">.</a> </li>
-                    <li> <a href="#slide3">.</a> </li>
-                    <li> <a href="#slide4">.</a> </li>
-                </ul>
-
-            </div>
-
-        </section>
-
-        -->
 
         <section id = "ID_Experiencia", class="Experiencia_Educacion_Seccion">
             <div class = "Experiencia_Educacion_Contenedor">
