Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <h2>MARCO RUVALCABA</h2>
                     <p>Software Developer</p>
 
-                    <A HREF="Styles!.html"> Wake Up </A>
+                    <A HREF="Styles!.html">Link 1</A>
                     <br>
                     <br>
                     <br>
                     <br>
-                    <A HREF="Styles.html"> Keep Dreaming </A>
+                    <A HREF="Styles.html">Link 2</A>
                 
             </div>
         </section>
